Update UI translations

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
@@ -80,7 +80,7 @@
   "resultsPage10Title": "Una notificació quan toqui anar a votar?",
   "resultsPage10NopButton": "Nope, gràcies!",
   "resultsPage10YesButton": "Síííííí",
-  "resultsShare": "Comparteix",
+  "resultsShare": "Comparteix (coming soon ⏳)",
   "@HomePage": "HomePage",
   "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
   "homePageBackToTest": "Tornar al test",
