--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_lt.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_lt.arb
@@ -2,51 +2,51 @@
   "@@locale": "lt",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "Ok",
-  "yes": "Yes",
-  "no": "No",
-  "cancel": "Cancel",
-  "textContinue": "Continue",
-  "alertServerErrorTitle": "Ops!",
-  "alertServerErrorText": "Something has gone wrong on our side. Please try again later.",
-  "skip": "Skip",
-  "neutral": "Neutral",
-  "faq": "FAQ",
+  "ok": "Gerai",
+  "yes": "Taip",
+  "no": "Ne",
+  "cancel": "Atšaukti",
+  "textContinue": "Tęsti",
+  "alertServerErrorTitle": "Ups!",
+  "alertServerErrorText": "Kažkas čia ne taip iš mūsų pusės. Pabandykite dar kartą vėliau.",
+  "skip": "Praleisti",
+  "neutral": "Neturiu nuomonės",
+  "faq": "DUK",
   "@@SplashPage": "SplashPage",
-  "splashPageNoInternet": "It looks like you don't have internet connection",
+  "splashPageNoInternet": "Panašu, kad neturite prieigos prie interneto",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Let’s continue in English? :)",
-  "languagePageSubtitle": "This can be changed later in settings.",
+  "languagePageTitle": "Tęskime lietuviškai? :)",
+  "languagePageSubtitle": "Tai galima pakeisti vėliau nustatymuose.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "If this cute pigeon can’t help you vote in June, nothing will.",
+  "entranceTitle1": "Jeigu šis mielas balandis Jums nepadės  balsuoti  birželį, niekas nepadės.",
   "entranceTitle2": "Swipe your opinion on topics that matter to you.",
   "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
   "entranceMatchesFoundQuote": "{count} matches found in the last 24h",
-  "entranceStartButton": "Start Palumba",
+  "entranceStartButton": "Pradėti Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hungary",
-  "denmark": "Denmark",
-  "germany": "Germany",
-  "spain": "Spain",
-  "france": "France",
-  "poland": "Poland",
-  "romania": "Romania",
-  "sweden": "Sweden",
-  "onBoardingStep1Title": "Where will you vote?",
-  "onBoardingStep1Subtitle": "I don't know",
-  "onBoardingStep2Title": "My age",
-  "onBoardingStep3Title": "I identify as",
-  "onBoardingStep3Option1": "Woman",
-  "onBoardingStep3Option2": "Man",
+  "hungary": "Vengrija",
+  "denmark": "Danija",
+  "germany": "Vokietija",
+  "spain": "Ispanija",
+  "france": "Prancūzija",
+  "poland": "Lenkija",
+  "romania": "Rumunija",
+  "sweden": "Švedija",
+  "onBoardingStep1Title": "Kur balsuosite?",
+  "onBoardingStep1Subtitle": "Nežinau",
+  "onBoardingStep2Title": "Mano amžius",
+  "onBoardingStep3Title": "Aš save identifikuoju kaip",
+  "onBoardingStep3Option1": "Moteris",
+  "onBoardingStep3Option2": "Vyras",
   "onBoardingStep3Option3": "Gender-fluid",
-  "onBoardingStep3Option4": "Non-binary",
-  "onBoardingStep3Option5": "Else",
-  "onBoardingNotAnswerButton": "Prefer not to say",
-  "onBoardingCardQuestion": "I have no clue who to vote for at the 2024 European Elections",
+  "onBoardingStep3Option4": "Nebinarinė tapatybė",
+  "onBoardingStep3Option5": "Kita",
+  "onBoardingNotAnswerButton": "Nenoriu atskleisti",
+  "onBoardingCardQuestion": "Neturiu žalio supratimo už ką balsuoti 2024 Europos Parlamento rinkimuose",
   "onBoardingLastStepTitle": "Swipe according to your agreement",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Your personalised results are on their way :)",
-  "loadingResultsPageTitle2": "This shall be quicker than getting Taylor Swift tickets 👀 ",
+  "loadingResultsPageTitle1": "Jūsų personalizuoti rezultatai pakeliui:)",
+  "loadingResultsPageTitle2": "Tai bus greičiau negu įsigyti Taylor Swift bilietus 👀 ",
   "loadingResultsPageTitle3": "Finding matches with candidates lists in {country}  🔍",
   "loadingResultsPageTitle4": "Almost ready, one last check...",
   "@@ResultsPage": "ResultsPage",
