--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sv-SE.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sv-SE.arb
@@ -3,19 +3,19 @@
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
   "ok": "Ok",
-  "yes": "Yes",
-  "no": "No",
-  "cancel": "Cancel",
-  "textContinue": "Continue",
+  "yes": "Ja",
+  "no": "Nej",
+  "cancel": "Avbryt",
+  "textContinue": "Fortsätt",
   "alertServerErrorTitle": "Ops!",
-  "alertServerErrorText": "Something has gone wrong on our side. Please try again later.",
-  "skip": "Skip",
+  "alertServerErrorText": "Ett fel har uppstått från vårt håll. Vänligen försök igen senare.",
+  "skip": "Hoppa över",
   "neutral": "Neutral",
   "faq": "FAQ",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "It looks like you don't have internet connection",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Let’s continue in English? :)",
+  "languagePageTitle": "Fortsätt på svenska? :)",
   "languagePageSubtitle": "This can be changed later in settings.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "If this cute pigeon can’t help you vote in June, nothing will.",
@@ -24,22 +24,22 @@
   "entranceMatchesFoundQuote": "{count} matches found in the last 24h",
   "entranceStartButton": "Start Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hungary",
-  "denmark": "Denmark",
-  "germany": "Germany",
-  "spain": "Spain",
-  "france": "France",
-  "poland": "Poland",
-  "romania": "Romania",
-  "sweden": "Sweden",
-  "onBoardingStep1Title": "Where will you vote?",
-  "onBoardingStep1Subtitle": "I don't know",
+  "hungary": "Ungern",
+  "denmark": "Danmark",
+  "germany": "Tyskland",
+  "spain": "Spanien",
+  "france": "Frankrike",
+  "poland": "Polen",
+  "romania": "Rumänien",
+  "sweden": "Sverige",
+  "onBoardingStep1Title": "Var kommer du rösta?",
+  "onBoardingStep1Subtitle": "Jag vet inte",
   "onBoardingStep2Title": "My age",
   "onBoardingStep3Title": "I identify as",
-  "onBoardingStep3Option1": "Woman",
+  "onBoardingStep3Option1": "Kvinna",
   "onBoardingStep3Option2": "Man",
   "onBoardingStep3Option3": "Gender-fluid",
-  "onBoardingStep3Option4": "Non-binary",
+  "onBoardingStep3Option4": "Ickebinär",
   "onBoardingStep3Option5": "Else",
   "onBoardingNotAnswerButton": "Prefer not to say",
   "onBoardingCardQuestion": "I have no clue who to vote for at the 2024 European Elections",
