Update UI translations

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
@@ -100,7 +100,7 @@
   "settingsPageSubtitle3": "Soci acadèmic",
   "settingsPageSubtitle4": "Socis institucionals nacionals",
   "settingsPageSubtitle5": "Proveïdors del servei",
-  "settingsPageShareButtonText": "Compartir (pròximament ⏳)",
+  "settingsPageShareButtonText": "Compartir",
   "settingsPagePrivacyPolicy": "Política de Privacitat",
   "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
 }
