Update italian translations

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_it.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_it.arb
@@ -13,12 +13,12 @@
   "neutral": "Neutrale",
   "faq": "FAQ",
   "@@SplashPage": "SplashPage",
-  "splashPageNoInternet": "Sembra che tu non abbia una connessione internet",
+  "splashPageNoInternet": "Sembra che tu non abbia una connessione ad internet",
   "@@LanguagePage": "LanguagePage",
   "languagePageTitle": "Continuiamo in italiano? :)",
-  "languagePageSubtitle": "Potrai cambiare in seguito nelle impostazioni.",
+  "languagePageSubtitle": "Potrai cambiarla in seguito nelle impostazioni.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Se questo piccione carino non ti aiuterà a votare a giugno, nient'altro lo farà.",
+  "entranceTitle1": "Se questo piccione carino non ti aiuterà a votare a Giugno, nient'altro lo farà.",
   "entranceTitle2": "Scorri sull'opinione che più ti interessa.",
   "entranceTitle3": "Trova il tuo abbinamento e l'orientamento per cui votare alle elezioni.",
   "entranceMatchesFoundQuote": "{count} abbinamenti trovati nelle ultime 24 ore",
@@ -46,12 +46,12 @@
   "onBoardingLastStepTitle": "Scorri in base a quanto sei d'accordo",
   "@@LoadingResultsPage": "LoadingResultsPage",
   "loadingResultsPageTitle1": "I tuoi risultati personalizzati sono in arrivo :)",
-  "loadingResultsPageTitle2": "Dovrebbe essere più veloce che prendere dei biglietti per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trova gli abbinamenti con le liste candidate in {country}  🔍",
+  "loadingResultsPageTitle2": "Dovrebbe essere più veloce che prendere dei biglietti per Taylor Swift 👀",
+  "loadingResultsPageTitle3": "Trova gli abbinamenti con le liste candidate in {country} 🔍",
   "loadingResultsPageTitle4": "Quasi pronti, un ultimo controllo...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Un match e tanto altro 👉👈",
-  "resultsPage1Text": "Nelle prossime schermate, scoprirai il gruppo del Parlamento Europeo con cui sei più compatibile, le liste locali da votare a giugno nel tuo paese e abbiamo anche trovato un paio di cose extra in base alle tue risposte  😌",
+  "resultsPage1Text": "Nelle prossime schermate, scoprirai il gruppo del Parlamento Europeo con cui sei più compatibile, le liste locali da votare a Giugno nel tuo paese e abbiamo anche trovato un paio di cose extra in base alle tue risposte 😌",
   "resultsPage1Button": "Premi per continuare",
   "resultsPage2_1Title": "Onestamente, tra il",
   "resultsPage2_2Title": "e me, è una Love Story (EU's Version)",
@@ -60,7 +60,7 @@
   "resultsPage4TitleBottom": "Contro l'Integrazione UE",
   "resultsPage4TitleLeft": "Sinistra",
   "resultsPage4TitleRight": "Destra",
-  "resultsPage4TitleUserHere": "It's me, hi!",
+  "resultsPage4TitleUserHere": "Eccomi qua!",
   "resultsPage5Title": "Su argomenti specifici, quale Gruppo Parlamentare Europeo mi è più vicino?",
   "resultsPage5Topic1": "Questioni ambientali",
   "resultsPage5Topic2": "Diritti Umani e Sociali",
@@ -91,10 +91,10 @@
   "settingsPageSubtitleLanguage": "Preferisco usare quest'app in",
   "settingsPageTextLanguage": "Per cambiare la lingua, premi su quella attuale",
   "settingsPageTitleAbout": "Su di noi",
-  "settingsPageTextAbout": "Palumba non è una compagnia, non è un partito politico, non è un ente governativo. Siamo un'associazione no-profit indipendente con più di 120 giovani da tutta Europa che si sono riuniti la scorsa estate ed iniziato a creare l'app. Abbiamo un solo obbiettivo: aiutarti a capire meglio come funzionano le Elezioni Europee e quali candidati potrebbero essere più vicini alle tue idee, affinché tu possa votare con più sicurezza per le persone che supportano le tue priorità. Il nostro algoritmo è open-source, le dichiarazioni che voterai sono state riviste da scienziati politici, e i tuoi dati sono così criptati che non c'è modo di identificarti ;)",
+  "settingsPageTextAbout": "Palumba non è una compagnia, non è un partito politico, non è un ente governativo. Siamo un'associazione no-profit indipendente con più di 120 giovani da tutta Europa che si sono riuniti la scorsa estate ed iniziato a creare l'app. Abbiamo un solo obiettivo: aiutarti a capire meglio come funzionano le Elezioni Europee e quali candidati potrebbero essere più vicini alle tue idee, affinché tu possa votare con più sicurezza per le persone che supportano le tue priorità. Il nostro algoritmo è open-source, le dichiarazioni che voterai sono state riviste da scienziati politici, e i tuoi dati sono così criptati che non c'è modo di identificarti ;)",
   "settingsPageTitleAssociation": "L'associazione",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "È importante dirti che i partners non hanno potere editoriale sul contenuto dell'app, che rimane un'iniziativa imparziale con un obbiettivo chiaro: aiutarti a capire chi supporta le tue opinioni a livello europeo e nazionale.",
+  "settingsPageTitlePartners": "Partner",
+  "settingsPageTextPartners": "È importante dirti che i partner non hanno potere editoriale sul contenuto dell'app e che rimane un'iniziativa imparziale con un obiettivo chiaro: aiutarti a capire chi supporta le tue opinioni a livello europeo e nazionale.",
   "settingsPageSubtitle1": "Sponsor principali",
   "settingsPageSubtitle2": "Partners Europei",
   "settingsPageSubtitle3": "Partner accademico",
@@ -102,5 +102,5 @@
   "settingsPageSubtitle5": "Service Providers",
   "settingsPageShareButtonText": "Condividi",
   "settingsPagePrivacyPolicy": "Protezione dati",
-  "settingsPageShareText": "Se questo simpatico piccione non ti aiuterà a votare a giugno, nient'altro lo farà. Ho usato l'app e dovresti farlo anch tu:"
+  "settingsPageShareText": "Se questo simpatico piccione non ti aiuterà a votare a Giugno, nient'altro lo farà. Ho usato l'app e dovresti farlo anche tu:"
 }
